# youtrack.nvim

./: .gitignore  .rgignore  Cargo.toml  Makefile  README.md  Taskfile.yml  build.rs  openapi.json
lua/youtrack/: agiles.lua  config.lua  init.lua  issues.lua  layouts.lua  log.lua  queries.lua  setup.lua  state.lua  utils.lua
src/: client.rs  config.rs  error.rs  lib.rs  logger.rs  lua.rs  macros.rs  writer.rs
