[package]
name = "youtrack-nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
mlua = { version = "0.9.9", features = [
  "luajit",
  "module",
  "serialize",
  "async",
  "macros",
] }
erased-serde = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
percent-encoding = "2.2.0"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "stream",
  "default-tls",
] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
structured-logger = "1.0.3"
log = { version = "0.4.22", features = ["kv"] }
once_cell = "1.19.0"
serde_urlencoded = "0.7.1"

[build-dependencies]
http = "1.1.0"
indexmap = "2.5.0"
openapiv3 = "2.0.0"
prettyplease = "0.1.25"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "1.0"

[profile.release]
opt-level = "s"
overflow-checks = false
