[package]
name = "youtrack-nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.9", features = [
  "luajit",
  "module",
  "serialize",
  "async",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "stream",
  "default-tls",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
structured-logger = "1.0.3"
log = { version = "0.4.22", features = ["kv"] }
once_cell = "1.20.2"
url = { version = "2.5.4", features = ["serde"] }
erased-serde = "0.4.5"
serde-value = "0.7.0"

[build-dependencies]

[profile.release]
opt-level = "s"
overflow-checks = false
